changes with Laura

--- a/src/utils/Translations/en.json
+++ b/src/utils/Translations/en.json
@@ -15,7 +15,7 @@
     "product_development": {
       "title": "Development of new products",
       "texts": [
-        "Support in the study of new products, in the dairy sector, sweet and savoury vegetable preserves, special products with nutritional claims, breakfast products, sweet and savoury snacks, vegetable drinks",
+        "Support in the study of new products, in the dairy sector, sweet and savoury vegetable preserves, special products with nutritional claims, breakfast products, sweet and savoury snacks, vegetable drinks. ",
         "Research and selection of producers on behalf of third parties."
       ]
     },
@@ -28,9 +28,9 @@
     "quality_assurance": {
       "title": "Quality assurance",
       "texts": [
-        "Support in relationships and litigation with suppliers, customers or supervisory authorities.",
-        "Drafting and/or verification of legal compliance of labels.",
-        "Supplier audits for qualification, surveillance, or to investigate serious quality problems.",
+        "Support in relationships and litigation with suppliers, customers or supervisory authorities. ",
+        "Drafting and/or verification of legal compliance of labels. ",
+        "Supplier audits for qualification, surveillance, or to investigate serious quality problems. ",
         "Personalized training courses, conducted with the participatory method, on quality, hygiene and safety of food and nutrition."
       ] 
     }
