--- a/src/utils/Translations/en.json
+++ b/src/utils/Translations/en.json
@@ -12,7 +12,7 @@
   },
   "service": {
     "title": "Service",
-    "description": "...we aim straight to the heart of the problem, improve products, increase efficiency! We offer small and medium enterprises our many years of experience and expertise, to help them reach levels of excellence",
+    "description": "...we aim straight to the heart of the problem, improve products, increase efficiency! We offer to small and medium enterprises our many years of experience and expertise, to help them reach levels of excellence",
     "product_development": {
       "title": "Development of new products",
       "texts": [
