--- a/src/utils/Translations/it.json
+++ b/src/utils/Translations/it.json
@@ -99,7 +99,7 @@
 
   "footer": {
     "copyright": "© 2022 Officina Alimentare. Tutti i diritti riservati.",
-    "leonardocite": "Quelli che s’innamoran di pratica senza Scienza, son come il nocchieri che entra ai navigo senza timone o bussola, che mai ha certezza dove si vada. (Leonardo, Codice G.F. 8v.)",
+    "leonardocite": "Quelli che s’innamoran di pratica senza Scienza, son come il nocchieri che entra ai navilo senza timone o bussola, che mai ha certezza dove si vada. (Leonardo, Codice G.F. 8v.)",
     "title": "Officina Alimentare",
     "texts": ["Studio Professionale Associato", "P. IVA 05122760282"],
     "contact": "Contatti",
