she misspelled it again

--- a/src/utils/Translations/en.json
+++ b/src/utils/Translations/en.json
@@ -99,7 +99,7 @@
 
   "footer": {
     "copyright": "© 2022 Officina Alimentare. All rights reserved.",
-    "leonardocite": "Quelli che s’innamoran di pratica senza Scienza, son come il nocchieri che entra ai navilo senza timone o bussola, che mai ha certezza dove si vada. (Leonardo, Codice G.F. 8v.)",
+    "leonardocite": "Quelli che s’innamoran di pratica senza Scienza, son come il nocchiere che entra in naviglio senza timone o bussola, che mai ha certezza dove si vada. (Leonardo, Codice G.F. 8v.)",
     "title": "Officina Alimentare",
     "texts": [
       "Professional Associate Studio",
